feat: 選將進度廣播 GeneralSelectionStatusEvent（issue #237）
- Game.othersChoosePlayerGeneral 選將中不再回空 events → 廣播進度
  （selectedPlayerIds/pendingPlayerIds/allSelected，不帶武將 id — 暗選）；
  主公選完同樣廣播；最後一位先收 allSelected=true 再照舊 InitialEnd 開局
- 新 GeneralSelectionStatusPresenter + WebSocketBroadCast 廣播全員
- InitialEndPresenter/RoundStartPresenter 改以事件存在與否判斷
  （原以 events 非空為觸發條件，選將中會 orElseThrow → 400）
- findGameEvent 在 Initial 階段加帶 data.selectionStatus（重整/重連補狀態）
- 測試：domain GeneralSelectionStatusTest ×3、spring GeneralSelectionStatusE2ETest
  （推播內容 + 暗選不洩漏 + findGame 補進度）、GameTest 逐步驗證
  shouldReceiveSelectionStatus（1/4→4/4）、FanKuiFullFlowTest pop 數對應調整
- API_DOC：選將節 + 事件總表

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KV1eQrYWBp5rJA25ock1qP